--- a/styles/style.css
+++ b/styles/style.css
@@ -10,10 +10,11 @@
     --text-color: hsl(0 0% 46%);
     --text-color-light: hsl(0 0% 98%);
     --body-color: hsl(0 0% 98%);
-    /* 
-    font-family: 'DM Sans', sans-serif;
-    font-family: 'Poppins', sans-serif; 
-    */
+    --dm-sans: 'DM Sans', sans-serif;
+    --poppins: 'Poppins', sans-serif; 
+    /* SIZES */
+    --title-font-size: 3rem;
+    --paragraph-font-size: 1.6rem;
     font-size: 62.5%;
 }
 
@@ -39,14 +40,14 @@ html {
 }
 
 body {
-    font: 400 1.6rem "DM Sans", sans-serif;
+    font: 400 var(--paragraph-font-size) "DM Sans", sans-serif;
     background: var(--body-color);
     color: var(--text-color);
     -webkit-font-smoothing: antialiased;
 }
 
 .title {
-    font: 700 3rem 'Poppins', sans-serif;
+    font: 700 var(--title-font-size) 'Poppins', sans-serif;
     color: var(--title-color);
     -webkit-font-smoothing: auto;
 }
@@ -80,12 +81,8 @@ body {
     color: var(--body-color);
 }
 
-main {
-    margin-top: calc(var(--header-height) + 3.2rem);
-}
-
 .section {
-    padding: 8rem 0;
+    padding: calc(8rem + var(--header-height)) 0;
 }
 
 .section .title {
@@ -166,7 +163,9 @@ nav ul li a {
     position: relative;
 }
 
-nav ul li a:hover {
+nav ul li a:hover, nav .menu ul li a.active {
+    font-weight: bold;
+    -webkit-font-smoothing: auto;
     color: var(--base-color);
 }
 
@@ -181,7 +180,7 @@ nav ul li a::after {
     transition: width 400ms;
 }
 
-nav ul li a:hover::after {
+nav ul li a:hover::after, nav ul li a.active::after {
     width: 100%;
 }
 
@@ -434,6 +433,10 @@ footer {
     background-color: var(--base-color);
 }
 
+footer.section {
+    padding: 6.4rem 0;
+}
+
 footer .logo {
     display: inline-block;
     margin-bottom: 2.4rem;
@@ -447,8 +450,13 @@ footer .brand p + p {
     margin-top: 1.2rem;
 }
 
+footer .social {
+    grid-auto-flow: column;
+    width: fit-content;
+    /* grid-template-columns: repeat(3, 1fr); */
+}
+
 footer .social a {
-    margin-right: 3.2rem;
     display: inline-block;
     transition: .4s;
 }
@@ -503,6 +511,138 @@ footer i {
 
 /* --------------------------    RESPONSIVE    -------------------------- */
 @media(min-width: 992px) {
-    
-}
+    :root {
+        --title-font-size: 3.6rem;
+        --paragraph-font-size: 1.8rem;
+    }
 
+    .cards p {
+        font-size: 1.6rem;
+    }
+
+    main {
+        margin-top: var(--header-height);
+    }
+
+    .section {
+        padding: 16rem 0;
+    }
+
+    .section header, #testimonials header {
+        max-width: 51.2rem;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .button {
+        padding: 1.4rem 3.2rem;
+    }
+
+
+    /* --------------------------    HEADER    -------------------------- */
+    #header {
+        justify-content: center;
+    }
+
+    .container {
+        width: min(80%, 112rem);
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    nav .icon-menu {
+        display: none;
+    }
+
+    nav .menu {
+        opacity: 1;
+        visibility: visible;
+        top: 0;
+    }
+
+    nav .menu ul {
+        display: flex;
+        gap: 2rem;
+    }
+
+    nav .menu ul li a.title {
+        font: 400 1.6rem var(--poppins);
+        -webkit-font-smoothing: antialiased;
+    }
+
+    nav .menu ul li a.active {
+        font-weight: bold;
+        -webkit-font-smoothing: auto;
+    }
+
+
+    /* --------------------------    HOME    -------------------------- */
+    #home .image {
+        order: 1;
+    }
+
+    #home .container {
+        grid-auto-flow: column;
+        justify-content: space-between;
+        margin: 0 auto;
+    }
+
+    #home .text {
+        order: 0;
+        max-width: 40rem;
+        text-align: left;
+    }
+
+
+    /* --------------------------    ABOUT    -------------------------- */
+    #about .container {
+        margin: 0 auto;
+        grid-auto-flow: column;
+    }
+
+
+    /* --------------------------    TESTIMONIALS     -------------------------- */
+    #testimonials .container {
+        margin: 0 auto;
+    }
+
+    .cards {
+        grid-template-columns: repeat(3, 1fr);
+        /* grid-auto-flow: column; */
+    }
+
+    .card {
+        padding-left: 4.8rem;
+        padding-right: 4.8rem;
+    }
+
+
+    /* --------------------------    CONTACT     -------------------------- */
+    #contact .container {
+        margin: 0 auto;
+        grid-auto-flow: column;
+        align-items: center;
+    }
+
+    #contact .container .text {
+        max-width: 40rem;
+    }
+
+
+    /* --------------------------    FOOTER     -------------------------- */
+    footer.section {
+        padding: 6rem 0;
+    }
+
+    footer .container {
+        margin: 0 auto;
+        grid-auto-flow: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    footer .logo {
+        font-size: 3.6rem;
+    }
+}
